// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.0 bertsioa
================
- Elhuyar hiztegia tarteko orrialderik erabili gabe kontsulta daiteke. (#36)
- POST metodoa darabilten hiztegien atzipena hobetu da. (#32)
- Kontsulta konbinatuetan hiztegi gehiago kontsulta daitezke. (#25)
- Kontsulta konbinatuetan hiztegien jatorrizko webguneetara joateko esteka erantsi da. (#35)
- Ongi etorri leihoa sortu da. (#29)
- Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
- Sinonimoen hiztegiak gehitu zaizkio barrari.
- Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
- Azalak sortu dira. (#14)
- Estatistika lokalak sortu dira. (#4)
- Estatistika lokalak ezabatzeko botoi bat gehitu zaio estatistiken leihoari (#23)
- 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
- Elhuyarren azpisarrerak kontsultatzean azentu markekin zegoen arazoa konpondu da. (#13)
- Open-Tran hiztegiak fitxak berrerabiltzeko zuen arazoa konpodu da. (#12)
- Hizkuntza hautatzeko botoiaren itxura aldatu da.
- Aukera berria: Shift eta Ktrl kontsultetarako denbora-muga aldatu egin daiteke.
- Morris kontsultaren letra-tipoa aldatu egin da, gainerako kontsulten letra-tipo bera eduki dezan.
- Hiztegien menuko hiztegiek fitxen hobespenak errespetatzen dituzte zabaltzean. (#16)
- Aldaketak hiztegien menuan:
  + Poloniera - Euskara hiztegia gehitu da.
  + Japoniera - Euskara hiztegia gehitu da.
  + Drogen hiztegiaren helbidea aldatu da. (#33)
  + Kazetaritza hiztegia eta Laburzki ezabatu dira.
  + Informatika hiztegia ezabatu da.


2.2 bertsioa
================
- ElHuyar-reko hiztegi berrian bilaketak egiteko eguneraketa


2.1 bertsioa
================
- Abiaratzean ezarritako hiztegien akats bat zuzendu da (jatorrizko hizkuntza eu zenean).
- Fitxak atzeko planoan zabaltzeko aukera gehitu da.
- Aukeratutako testu baten gainean kontsultak egiteko aukera gehitu da Euskalbar osoa eskuin-klik batean eskuragarri izanik. (#8)