@@ -4,6 +4,7 @@
 
 3.0 bertsioa
 ================
+- Kontsulta konbinatuetan Elhuyarren eta 3000ren azpisarrerak ere kontsultatzen dira. (#26)
 - Elhuyar hiztegia tarteko orrialderik erabili gabe kontsulta daiteke. (#36)
 - POST metodoa darabilten hiztegien atzipena hobetu da. (#32)
 - Kontsulta konbinatuetan hiztegi gehiago kontsulta daitezke. (#25)
